tests/sksl/errors/BadCaps.dsl.glsl
### Compilation failed:

error: unknown capability flag 'bugFreeDriver'

error: global variable initializer must be a constant expression

2 errors
